# django-translatable

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci-release.yml  run-tests.yml
dragoman/: apps.py  collectors.py  fixtures.py  patchers.py  settings.py  utils.py
dragoman/management/commands/: collect_models.py  initdjango.py
dragoman/utils/: common_utils.py  provider_utils.py
test_django_project/: apps.py  models.py  settings.py  signals.py
test_django_project/migrations/: 0001_initial.py
tests/: __django_settings__.py  __setup_django__.py  conftest.py  fixtures.py  mocks.py  test_app.py  test_command_initdjango.py  test_models.py
tests/fixtures/: countries.py
tests/test_django_project/: apps.py  models.py  settings.py
