[tool.poetry]
name = "dragoman"
version = "0.0.0"
description = "Dragoman is a django translation project"
authors = ["Bezlootskiy Dmitriy <dimitrionian123@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/djangoheads/djangoheads"
repository = "https://github.com/djangoheads/djangoheads"
documentation = "https://github.com/djangoheads/djangoheads"
keywords = ["django", "development", "translation"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Software Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 1 - Planning",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
django = "^4.2.7"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.black]
line-length = 120
